--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>firstjazz</head>
-  <script src="/js/head.js"></script>
+  <script src="./js/head.js"></script>
 <body>
 
 <h1>First Jazz</h1>
