--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>firstjazz</head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <lin
+  <script src="js/head.js"></script>
 <body>
 
 <h1>First Jazz</h1>
