--- a/404.html
+++ b/404.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page not found</title>
+<title>Sidan finns inte/Page not found</title>
 </head>
 <body>
 
 <h1>404</h1>
-<p>Page not found</p>
+<p>Sidan finns inte/Page not found</p>
 
+<p></p><a href="/index.html">Till förstasidan/Back to first page</a></p>
+  
 </body>
 </html>
