--- a/index.html
+++ b/index.html
@@ -3,12 +3,37 @@
   <head>
     <meta charset="utf-8">
     <script src="js/head.js"></script>
-    <title>firstjazz</title>
+    <title>Mats Musik</title>
   </head>
 <body>
 
-<h1>First Jazz</h1>
-<p>Here we go again!</p>
+<h1>Mats Berg's Musik</h1>
+<p>Jag är en deltidsbassist som spelar i lite olika sammanhang i sydvästra Skåne</p>
+
+<h2>Banden jag är med i</h2>
+
+<div>
+<h3>Jazzåminsann</h3>
+<p>Vi är en duo - sång och bas - som håller igång en ganska klassisk jazzreprtoir med inslag av några oväntade låtar.</p>
+<p>Du kan läsa mer om oss på <a href="https://www.facebook.com/jazzaminsann">Jazzåminsann på facebook</a>a></p>
+<p>Ibland samarbetar vi med andra musiker. När det händer är det oftast en pianist eller gitarrist som vi anlitar.</p>
+<p>Känner du för att boka Jazzåminsann via mig är du välkommen med en förfrågan</p>
+  
+<form action="mailto:mats.berg.music@gmail.com" method="post" enctype="text/plain">
+<input type="hidden" name="subject" value="Jazzaminsann">
+Namn:<br/>
+<input type="text" name="namn" placeholder="ange bokarens namn här"><br/>
+E-postadress:<br>
+<input type="text" name="mail" placeholder="ange e-postadress här"><br>
+Berätta vad bokningen rör sig om, gärna med datum tid och plats:<br>
+<input type="text" name="comment" size="50"><br><br>
+<input type="submit" value="Skicka">
+<input type="reset" value="Rensa">
+</form>
+
+  
+</div>
+
 
 </body>
 </html>
