--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 <body>
 
-<h1>Mats Berg's Musik</h1>
+<h1>Mats Berg's musik</h1>
 <p>Jag är en deltidsbassist som spelar i lite olika sammanhang i sydvästra Skåne</p>
 
 <h2>Banden jag är med i</h2>
