--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv-SE">
   <head>
     <meta charset="utf-8">
     <script src="js/head.js"></script>
@@ -15,23 +15,8 @@
 <div>
 <h3>Jazzåminsann</h3>
 <p>Vi är en duo - sång och bas - som håller igång en ganska klassisk jazzreprtoir med inslag av några oväntade låtar.</p>
-<p>Du kan läsa mer om oss på <a href="https://www.facebook.com/jazzaminsann">Jazzåminsann på facebook</a>a></p>
+<p>Du kan läsa mer om oss på <a href="https://www.facebook.com/jazzaminsann">Jazzåminsann på facebook</a> Här kan du ockaså se våra kontkatuppgifter om du vill boka oss.</p>
 <p>Ibland samarbetar vi med andra musiker. När det händer är det oftast en pianist eller gitarrist som vi anlitar.</p>
-<p>Känner du för att boka Jazzåminsann via mig är du välkommen med en förfrågan</p>
-  
-<form action="mailto:mats.berg.music@gmail.com" method="post" enctype="text/plain">
-<input type="hidden" name="subject" value="Jazzaminsann">
-Namn:<br/>
-<input type="text" name="namn" placeholder="ange bokarens namn här"><br/>
-E-postadress:<br>
-<input type="text" name="mail" placeholder="ange e-postadress här"><br>
-Berätta vad bokningen rör sig om, gärna med datum tid och plats:<br>
-<input type="text" name="comment" size="50"><br><br>
-<input type="submit" value="Skicka">
-<input type="reset" value="Rensa">
-</form>
-
-  
 </div>
 
 
