--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div>
 <h3>Jazzåminsann</h3>
 <p>Vi är en duo - sång och bas - som håller igång en ganska klassisk jazzreprtoir med inslag av några oväntade låtar.</p>
-<p>Du kan läsa mer om oss på <a href="https://www.facebook.com/jazzaminsann">Jazzåminsann på facebook</a> Här kan du ockaså se våra kontkatuppgifter om du vill boka oss.</p>
+<p>Du kan läsa mer om oss på <a href="https://www.facebook.com/jazzaminsann">Jazzåminsann på facebook</a>. Här kan du ockaså se våra kontkatuppgifter om du vill boka oss.</p>
 <p>Ibland samarbetar vi med andra musiker. När det händer är det oftast en pianist eller gitarrist som vi anlitar.</p>
 </div>
 
