--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html lang="sv-SE">
   <head>
     <meta charset="utf-8">
-    <script src="/js/head.js"></script>
+    <script src="../js/head.js"></script>
     <title>test</title>
   </head>
 <body>
