--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="sv-SE">
   <head>
     <meta charset="utf-8">
-    <script src="js/head.js"></script>
     <title>Mats Musik</title>
   </head>
 <body>
@@ -18,7 +17,9 @@
 <p>Du kan läsa mer om oss på <a href="https://www.facebook.com/jazzaminsann">Jazzåminsann på facebook</a>. Här kan du ockaså se våra kontkatuppgifter om du vill boka oss.</p>
 <p>Ibland samarbetar vi med andra musiker. När det händer är det oftast en pianist eller gitarrist som vi anlitar.</p>
 </div>
-
+<script>
+  debugger;
+</script>
 
 </body>
 </html>
